Improvements to core SASS files - converting units to rems and ems

--- a/MVC.WebUI/Content/website/css/bootstrap.html
+++ b/MVC.WebUI/Content/website/css/bootstrap.html
@@ -88,17 +88,15 @@
             <h1>Code (<code>&lt;pre&gt;, &lt;code&gt;, &lt;var&gt;, &lt;samp&gt;</code>)</h1>
 
             <section class="bs-section-2">
-                <h1>Code Block (<code>pre.code-block</code>)</h1>
+                <h1>Code Block (<code>pre.code</code>)</h1>
 
-                <pre class="code-block">
-                <code>
-                    var <var>articles</var> = new List&lt;Article&gt;();
-                </code>
-            </pre>
+                <pre class="code">
+                    <code>var <var>articles</var> = new List&lt;Article&gt;();</code>
+                </pre>
             </section>
 
             <section class="bs-section-2">
-                <h1>Inline Code (<code>.btn-menu</code>)</h1>
+                <h1>Inline Code (<code>&lt;code&gt;</code>)</h1>
 
                 <p>Here is the code: <code>var <var>articles</var> = new List&lt;Article&gt;();</code></p>
             </section>
